2010-10-06  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fixed the path to ui-anim_basic_16x16.gif

2010-10-04  Ingo Renner  <ingo.renner@dkd.de>

	* Release of version 1.2.1

	* Changed page content extractor to remove javascript tags and their content, credits Markus Kleinhenz

2010-09-30  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a missing class in ext_autoload.php
	* Fixed branch definition for the install script
	* Fixed status report check for current schema.xml

2010-09-29  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v1.2.0

	* Moved the Access Filter Plugin from resources/solr/ to resources/solr/plugins/
	* Updated Access Filter Plugin to version 1.1.0, brings extended access check support
	* Changed the install Solr script to get the access filter from the new location
	* Changed the Access Filter Plugin status report to use Solr's plugin information request handler
	* Updated schema.xml version to "link" it to the 1.5.0 version of the extension
	* Changed schema.xml access field default value to "c:0"
	* Added a report status to check whether the used solrconfig.xml is current
	* Added information about solrconfig.xml and Access Filter Plugin versions to the Solr status report status
	* Moved getLinkTargetPageId() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase
	* Fixed the Solr index menu in the index report

2010-09-15  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 1.2.0-preview
	* Changed directory for TYPO3 Solr plugins in solrconfig.xml

2010-09-15  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed install script to install the Solr Access Filter Plugin
	* Added Solr Access Filter Plugin to libs in solrconfig.xml
	* Changed path to libs in solrconfig.xml
	* Changed install script exclude Solr Access Filter Plugin Version number to variable

2010-09-14  Ingo Renner  <ingo.renner@dkd.de>

	* Added a method to call arbitrary servlets to tx_solr_SolrService